Done mobile and desktop

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,27 @@
-<p>
-  home works!
-</p>
+<div class="relative">
+
+  <!-- intro -->
+  <lbk-intro></lbk-intro>
+  <!-- end intro -->
+
+  <div class="relative grid gap-44 bg-accent pt-44 pb-96 lg:pt-64 md:gap-60">
+    <!-- features -->
+    <lbk-features class="block"></lbk-features>
+    <!-- end features -->
+
+    <!-- stay productive -->
+    <lbk-stay-productive class="block"></lbk-stay-productive>
+    <!-- end stay productive -->
+
+    <!-- testimonials -->
+    <lbk-testimonials class="block"></lbk-testimonials>
+    <!-- end testimonials -->
+
+    <!-- get early access today -->
+    <lbk-get-early-access class="absolute w-full bottom-0 left-1/2 block -translate-x-1/2 translate-y-1/2">
+    </lbk-get-early-access>
+    <!-- end get early access today -->
+  </div>
+
+
+</div>
