--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -1,3 +1,16 @@
-<header>
+<header class="bg-muted">
+  <nav class="container flex justify-between items-center py-10 sm:py-16 ">
 
+    <!-- logo -->
+    <img class="max-w-[100px] sm:max-w-none" src="/assets/images/logo.svg" alt="Logo">
+    <!-- logo -->
+
+    <!-- links -->
+    <ul class="flex gap-6 text-sm text-muted font-medium sm:gap-16 sm:text-base md:gap-20 md:text-lg 2xl:gap-32">
+      <li><a class="hover:text-inverted hover:font-bold hover:border-b-2 hover:border-white" href="#">Features</a></li>
+      <li><a class="hover:text-inverted hover:font-bold hover:border-b-2 hover:border-white" href="#">Team</a></li>
+      <li><a class="hover:text-inverted hover:font-bold hover:border-b-2 hover:border-white" href="#">Sign In</a></li>
+    </ul>
+    <!-- end links -->
+  </nav>
 </header>
