--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,3 +1,81 @@
-<p>
-  footer works!
-</p>
+<div class="bg-footer">
+
+  <footer class="container pt-96  pb-20 text-inverted lg:pb-32 2xl:pb-40 md:pt-80">
+    <!-- logo -->
+    <img class="" src="/assets/images/logo.svg" alt="Logo">
+    <!-- end logo -->
+
+    <div class="flex flex-col gap-16 mt-10 lg:flex-row lg:justify-between lg:items-start">
+
+      <div class="space-y-4 font-medium">
+
+        <!-- location -->
+        <div class="flex items-start gap-4 ">
+          <img class="" src="/assets/images/icon-location.svg" alt="Phone">
+          <p class="-mt-2 max-w-sm">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta ipsum quasi dolores
+            nihil ea ut sapiente
+            vel beatae sed maxime.</p>
+        </div>
+        <!-- end location -->
+
+        <!-- phone -->
+        <div class="flex items-center gap-4">
+          <img src="/assets/images/icon-phone.svg" alt="Phone">
+          <a>Phone: +1-543-123-4567</a>
+        </div>
+        <!-- end phone -->
+
+        <!-- email -->
+        <div class="flex items-center gap-4">
+          <img src="/assets/images/icon-email.svg" alt="Phone">
+          <a class="hover:text-muted" href="#">example@fylo.com</a>
+        </div>
+        <!-- end email -->
+      </div>
+
+      <!-- links -->
+      <div class="grid gap-10 lg:grid-cols-2 xl:gap-20 2xl:gap-32">
+        <ul class="grid gap-4 text-lg font-medium">
+          <li><a class="hover:text-inverted hover:font-bold" href="#">About Us</a></li>
+          <li><a class="hover:text-inverted hover:font-bold" href="#">Jobs</a></li>
+          <li><a class="hover:text-inverted hover:font-bold" href="#">Press</a></li>
+          <li><a class="hover:text-inverted hover:font-bold" href="#">Blog</a></li>
+        </ul>
+        <ul class="grid gap-4 text-lg font-medium">
+          <li><a class="hover:text-inverted hover:font-bold" href="#">Contact Us</a></li>
+          <li><a class="hover:text-inverted hover:font-bold" href="#">Terms</a></li>
+          <li><a class="hover:text-inverted hover:font-bold" href="#">Privacy</a></li>
+        </ul>
+      </div>
+      <!-- end links -->
+
+      <!-- socials -->
+      <div class="grid place-items-center">
+
+        <ul class="flex gap-4">
+          <!-- facebook -->
+          <li
+            class="grid w-10 h-10 border border-white rounded-full place-content-center hover:text-accent hover:border-muted">
+            <a class="" href="#"><span class="fab fa-facebook-f"></span></a>
+          </li>
+          <!-- end facebook -->
+
+          <!-- twitter -->
+          <li
+            class="grid w-10 h-10 border border-white rounded-full place-content-center hover:text-accent hover:border-muted">
+            <a href="#"><span class="fab fa-twitter"></span></a>
+          </li>
+          <!-- end twitter -->
+
+          <!-- instagram -->
+          <li
+            class="grid w-10 h-10 border border-white rounded-full place-content-center hover:text-accent hover:border-muted">
+            <a href="#"><span class="fab fa-instagram"></span></a>
+          </li>
+          <!-- end instagram -->
+        </ul>
+      </div>
+      <!-- end socials -->
+    </div>
+  </footer>
+</div>
