Fix footer should split four column

--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -7,8 +7,7 @@
 
     <div class="flex flex-col gap-16 mt-10 lg:flex-row lg:justify-between lg:items-start">
 
-      <div class="space-y-4 font-medium">
-
+      <div class="font-medium">
         <!-- location -->
         <div class="flex items-start gap-4 ">
           <img class="" src="/assets/images/icon-location.svg" alt="Phone">
@@ -17,6 +16,9 @@
             vel beatae sed maxime.</p>
         </div>
         <!-- end location -->
+      </div>
+
+      <div class="space-y-4 font-medium">
 
         <!-- phone -->
         <div class="flex items-center gap-4">
