--- a/src/app/pages/home/get-early-access/get-early-access.component.html
+++ b/src/app/pages/home/get-early-access/get-early-access.component.html
@@ -1,5 +1,5 @@
 <article class="container">
-  <div class="rouned-xl bg-muted py-20 px-6 md:px-10">
+  <div class="rounded-xl bg-muted py-20 px-6 md:px-10">
     <!-- text -->
     <div class="grid place-items-center">
       <h2 class="font-black font-heading text-center text-3xl 2xl:text-4xl">Get early access today</h2>
